# physic_engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml  ubuntu.yml
cmake/: AddEigen.cmake  SourcesAndHeaders.cmake
libs/opengl_ui/: CMakeLists.txt
libs/opengl_ui/cmake/: AddGLFW.cmake  SourcesAndHeaders.cmake
libs/opengl_ui/include/: gl_include_guard.hpp  shader_program.hpp  texture_manager.hpp  window_manager.hpp
libs/opengl_ui/shaders/: mix_fragment_shader.glsl  offset_vertex_shader.glsl  output_pos_vertex_shader.glsl  pos_fragment_shader.glsl  texture_fragment_shader.glsl  upside_down_texture_vertex_shader.glsl
libs/opengl_ui/src/: shader_program.cpp  texture_manager.cpp  window_manager.cpp
libs/physic_engine/: CMakeLists.txt
libs/physic_engine/cmake/: SourcesAndHeaders.cmake
libs/physic_engine/include/physic_engine/: body.hpp  simulator.hpp
libs/physic_engine/src/: body.cpp  simulator.cpp  tmp.cpp
libs/physic_engine/test/: CMakeLists.txt
libs/physic_engine/test/src/: tmp_test.cpp
src/: main.cpp
test/: CMakeLists.txt
